Added Menu Logic for Manager
